--- a/_posts/2016-04-06-廖雪峰Git.md
+++ b/_posts/2016-04-06-廖雪峰Git.md
@@ -3,4 +3,5 @@ layout: page
 title: 廖雪峰的Git
 ---
 
-http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000
+点击跳转到廖雪峰的官方网站<a href="http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000">廖雪峰git</a>
+
