--- a/_posts/2016-04-07-搭建blog的基本html用法.md
+++ b/_posts/2016-04-07-搭建blog的基本html用法.md
@@ -4,4 +4,4 @@ title: 基本的blog搭建方法
 ---
 
 <b>基本blog的搭建html方法</b>
-<a href="http://hufeng825.github.com/2014/01/13/ios35/">点此跳转</a>
+<a href="http://www.w3school.com.cn/tiy/t.asp?f=html_textformatting/">点此跳转</a>
