--- a/_posts/2016-04-10-64位运行汇编语言(未测试).md
+++ b/_posts/2016-04-10-64位运行汇编语言(未测试).md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 64位win系统编译汇编语言的方法
+title: 64位win系统编译汇编语言的方法(转载）
 ---
 
 
-转载自大牛博客:<a href="http://abloz.com/huzheng/stardict-dic/zh_CN/">点此跳转</a> 
+转载自大牛博客:<a href="http://www.menglanglang.com/?p=2233">点此跳转</a> 
