--- a/_posts/2016-04-25-又是一个DP问题.md
+++ b/_posts/2016-04-25-又是一个DP问题.md
@@ -4,7 +4,5 @@ title: 一个有关于两串合并的DP问题
 ---
 两个string，问第三个string能否用前两个拼接而成。利用DP建立bool类型矩阵来解决<br>
 
-
-<a href="http://blog.csdn.net/codywangziham01/article/details/38088017">AFHttpRequest博客链接</a><br>
-<a href="https://github.com/AFNetworking/AFNetworking">Github链接</a>
+![CodesCut-04-25](https://github.com/Santisco/Santisco.github.io/raw/master/CodesCuts/CodesCut-04-25.png)<br>
 
