--- a/_posts/2016-04-25-又是一个DP问题.md
+++ b/_posts/2016-04-25-又是一个DP问题.md
@@ -6,3 +6,4 @@ title: 一个有关于两串合并的DP问题
 
 ![CodesCut-04-25](https://github.com/Santisco/Santisco.github.io/raw/master/CodesCuts/CodesCut-04-25.png)<br>
 
+有关于原文的链接：<a hrep:"https://leetcode.com/problems/interleaving-string/">LeetCode链接</a>
