--- a/_posts/2016-04-26-youtube的几个方法.md
+++ b/_posts/2016-04-26-youtube的几个方法.md
@@ -3,8 +3,8 @@ layout: post
 title: youtube的几个简单的操作
 ---
 如果要对youtube的视频进行剪辑为gif的话可以直接在所属youtube的链接前加上GIF<br> 
-![](https://j.gifs.com/73MEXj.gif)
-
+![CodesCut-04-26](https://github.com/Santisco/Santisco.github.io/raw/master/CodesCuts/CodesCut-04-26.png)<br>
+如果要对youtube的视频进行下载的话，就在youtube中间加上magic。you－－magic－－tube<br>
 <a href="http://www.nsfwyoutube.com/"></a><br>
 
 
